<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="?attr/colorOnPrimary"

    android:layout_height="match_parent"
    android:fillViewport="true">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="687dp"
            android:layout_margin="20dp">

            <LinearLayout
                android:id="@+id/ssss"
                android:layout_width="345dp"
                android:layout_height="491dp"
                android:background="?attr/colorOnPrimary"
                android:orientation="vertical"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="9dp">


                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="367dp"
                    android:layout_height="58dp"
                    android:background="#F34336"
                    android:gravity="center"
                    android:text="@string/Addproduit"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imgproduit"
                    android:layout_width="match_parent"
                    android:layout_height="154dp"
                    app:srcCompat="@drawable/imgadd" />

                <LinearLayout
                    android:id="@+id/ayyyyy"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/DialogType"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"

                        android:hint="@string/Type"
                        android:textColorHint="#A1A1A1"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidth="1dp"
                        app:boxStrokeWidthFocused="2dp"
                        app:endIconMode="clear_text"
                        app:hintAnimationEnabled="true"
                        app:hintEnabled="true"
                        app:hintTextColor="@color/black"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:startIconTint="@color/green1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_Type"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:inputType="text"
                            android:maxLength="25" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ayy"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/Dialogquantitee"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="?attr/colorOnPrimary"

                        android:hint="@string/Quantite"
                        android:textColorHint="#A1A1A1"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidth="1dp"
                        app:boxStrokeWidthFocused="2dp"
                        app:endIconMode="clear_text"
                        app:hintAnimationEnabled="true"
                        app:hintEnabled="true"
                        app:hintTextColor="@color/black"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:startIconTint="@color/green1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_quantite"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:inputType="text"
                            android:maxLength="25" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/aaqq"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/Dialogpriix"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:background="?attr/colorOnPrimary"

                        android:hint="@string/Price"
                        android:textColorHint="#A1A1A1"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidth="1dp"
                        app:boxStrokeWidthFocused="2dp"
                        app:endIconMode="clear_text"
                        app:hintAnimationEnabled="true"
                        app:hintEnabled="true"
                        app:hintTextColor="@color/black"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:startIconTint="@color/green1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_prixx"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:inputType="text"
                            android:maxLength="25" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/BtnSaveAddProduit"
                android:layout_width="259dp"
                android:layout_height="58dp"
                android:layout_weight="10"
                android:background="@drawable/rounded_button"
                android:text="@string/Save"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/ssss"
                app:layout_constraintHorizontal_bias="0.569"
                app:layout_constraintStart_toStartOf="@+id/ssss"
                app:layout_constraintTop_toBottomOf="@+id/ssss"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>