<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.cardview.widget.CardView
        android:layout_width="357dp"
        android:layout_height="426dp"

        app:cardCornerRadius="15dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="488dp">

            <LinearLayout
                android:id="@+id/ssss"
                android:layout_width="357dp"
                android:layout_height="488dp"
                android:background="?attr/colorOnPrimary"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:background="#F34336"
                    android:gravity="center"
                    android:text="@string/Addfournisseur"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Title"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:gravity="center"
                    android:text=""
                    android:textColor="#36474F"
                    android:textSize="22dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/ayyyyy"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/DialogSecteurNeedy"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="?attr/colorOnPrimary"

                        android:hint="@string/spécialité"
                        android:textColorHint="#A1A1A1"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidth="1dp"
                        app:boxStrokeWidthFocused="2dp"
                        app:endIconMode="clear_text"
                        app:hintAnimationEnabled="true"
                        app:hintEnabled="true"
                        app:hintTextColor="@color/black"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:startIconDrawable="@drawable/ic_baseline_add_shopping_cart_24"
                        app:startIconTint="@color/green1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_Secteur"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:inputType="text"
                            android:maxLength="25" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ayy"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/DialogNameNeedy"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="?attr/colorOnPrimary"

                        android:hint="@string/fullname"
                        android:textColorHint="#A1A1A1"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidth="1dp"
                        app:boxStrokeWidthFocused="2dp"
                        app:endIconMode="clear_text"
                        app:hintAnimationEnabled="true"
                        app:hintEnabled="true"
                        app:hintTextColor="@color/black"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:startIconDrawable="@drawable/user_icon"
                        app:startIconTint="@color/green1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_FullName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:inputType="text"
                            android:maxLength="25" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/aaqq"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edt_cityEditText"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:background="?attr/colorOnPrimary"

                        android:hint="@string/Location"
                        android:textColorHint="#A1A1A1"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidth="1dp"
                        app:boxStrokeWidthFocused="2dp"
                        app:endIconMode="clear_text"
                        app:hintAnimationEnabled="true"
                        app:hintEnabled="true"
                        app:hintTextColor="@color/black"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:startIconDrawable="@drawable/address_icon"
                        app:startIconTint="@color/green1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/DialogLocationNeedy"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:inputType="text"
                            android:maxLength="25" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/aaee"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/DialogPhoneNeedy"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:background="?attr/colorOnPrimary"

                        android:hint="@string/Phone"
                        android:textColorHint="#A1A1A1"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidth="1dp"
                        app:boxStrokeWidthFocused="2dp"
                        app:endIconMode="clear_text"
                        app:hintAnimationEnabled="true"
                        app:hintEnabled="true"
                        app:hintTextColor="@color/black"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edt_Pin_code"
                        app:startIconDrawable="@drawable/call_icon"
                        app:startIconTint="@color/green1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_phone_noEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:inputType="number"
                            android:maxLength="8" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="51dp"
                    android:orientation="horizontal">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </LinearLayout>

                <Button
                    android:id="@+id/BtnSaveAddNeedy"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#36474F"
                    android:text="@string/save"
                    android:textColor="#FFFFFF" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</ScrollView>